Debug home route, add cancel and return buttons

--- a/app/css/contact.css
+++ b/app/css/contact.css
@@ -76,6 +76,11 @@ header {
     font-family: Arial;
     font-size: medium;
 }
+
+.empty-search-contacts-placeholder {
+    position: fixed;
+}
+
 .contactContainer #btns.edit{
     padding-block: 5px;
     display: inline-block;
@@ -116,6 +121,18 @@ header {
     font-family: Arial;
     font-size: medium;
 }
+.backFromSearch {
+    float: right;
+    display: inline-block;
+    padding-block: 5px;
+    background-color: #2f9902;
+    color: white;
+    font-family: Arial;
+    font-size: medium;
+    text-decoration: none;
+    border: white;
+    border-radius: 5px;
+}
 
 .showFormToAdd {
     float: right;
@@ -141,4 +158,12 @@ header {
 .footer-cl{
     display: block;
     height: 200px;
+}
+.footer {
+    position: fixed;
+    left: 0; bottom: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 40px;
+    border-top: 1px solid #eee;
 }
